Add vscode to iframe panel

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,6 +2,13 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
+panel_iframe:
+  vscode:
+    title: "VisualCode"
+    url: "http://192.168.50.5:8443"
+    icon: "mdi:microsoft-visual-studio-code"
+    require_admin: true
+
 python_script:
 
 logger:
