--- a/scenes.yaml
+++ b/scenes.yaml
@@ -56,3 +56,116 @@
       supported_features: 63
       state: 'on'
   icon: mdi:baby
+- id: '1648856190790'
+  name: Stillen
+  entities:
+    light.on_off_plug_1:
+      supported_color_modes: []
+      color_mode: onoff
+      mode: normal
+      dynamics: none
+      friendly_name: Plug Schlafzimmer
+      supported_features: 0
+      state: 'on'
+    light.innr_rb_250_c_59aa6efe_level_light_color_on_off:
+      min_mireds: 153
+      max_mireds: 555
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - hs
+      color_mode: color_temp
+      brightness: 3
+      color_temp: 467
+      hs_color:
+      - 30.015
+      - 87.382
+      rgb_color:
+      - 255
+      - 143
+      - 32
+      xy_color:
+      - 0.585
+      - 0.386
+      off_brightness:
+      friendly_name: Kommode
+      supported_features: 63
+      state: 'on'
+    light.lampi:
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - color_temp
+      - xy
+      color_mode: xy
+      brightness: 48
+      hs_color:
+      - 27.753
+      - 89.02
+      rgb_color:
+      - 255
+      - 133
+      - 28
+      xy_color:
+      - 0.6015
+      - 0.3759
+      mode: normal
+      dynamics: none
+      friendly_name: Lampi
+      supported_features: 40
+      state: 'on'
+    switch.schlafzimmer_licht:
+      friendly_name: Schlafzimmer Licht
+      state: 'off'
+  icon: mdi:baby-bottle
+- id: '1649017620156'
+  name: Schlafzimmer Nachtlicht
+  entities:
+    light.lampi:
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Lampi
+      supported_features: 40
+      state: 'off'
+    light.innr_rb_250_c_59aa6efe_level_light_color_on_off:
+      min_mireds: 153
+      max_mireds: 555
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - hs
+      color_mode: color_temp
+      brightness: 5
+      color_temp: 555
+      hs_color:
+      - 29.751
+      - 100
+      rgb_color:
+      - 255
+      - 126
+      - 0
+      xy_color:
+      - 0.614
+      - 0.373
+      off_brightness:
+      friendly_name: Kommode
+      supported_features: 63
+      state: 'on'
+    light.on_off_plug_1:
+      supported_color_modes: []
+      mode: normal
+      dynamics: none
+      friendly_name: Plug Schlafzimmer
+      supported_features: 0
+      state: 'off'
+    switch.schlafzimmer_licht:
+      friendly_name: Schlafzimmer Licht
+      state: 'off'
+  icon: mdi:weather-night
