--- a/scenes.yaml
+++ b/scenes.yaml
@@ -9,8 +9,11 @@
       supported_color_modes:
       - color_temp
       - hs
+      off_brightness:
+      friendly_name: Kommode
+      supported_features: 63
       color_mode: color_temp
-      brightness: 254
+      brightness: 128
       color_temp: 467
       hs_color:
       - 30.015
@@ -22,38 +25,31 @@
       xy_color:
       - 0.585
       - 0.386
-      off_brightness:
-      friendly_name: Kommode
-      supported_features: 63
+      state: 'on'
+    light.wickeltisch:
+      supported_color_modes:
+      - brightness
+      mode: normal
+      dynamics: none
+      icon: mdi:spotlight-beam
+      friendly_name: Wickeltisch
+      supported_features: 40
+      color_mode: brightness
+      brightness: 3
       state: 'on'
   icon: mdi:weather-night
 - id: '1647770049938'
   name: Wickeln tagsüber
   entities:
-    light.innr_rb_250_c_59aa6efe_level_light_color_on_off:
-      min_mireds: 153
-      max_mireds: 555
-      effect_list:
-      - colorloop
+    light.wickeltisch:
       supported_color_modes:
-      - color_temp
-      - hs
-      color_mode: color_temp
-      brightness: 254
-      color_temp: 337
-      hs_color:
-      - 27.881
-      - 57.799
-      rgb_color:
-      - 255
-      - 176
-      - 107
-      xy_color:
-      - 0.499
-      - 0.384
-      off_brightness:
-      friendly_name: Kommode
-      supported_features: 63
+      - brightness
+      mode: normal
+      dynamics: none
+      friendly_name: Wickeltisch
+      supported_features: 40
+      color_mode: brightness
+      brightness: 122
       state: 'on'
   icon: mdi:baby
 - id: '1648856190790'
@@ -61,43 +57,26 @@
   entities:
     light.on_off_plug_1:
       supported_color_modes: []
-      color_mode: onoff
       mode: normal
       dynamics: none
       friendly_name: Plug Schlafzimmer
       supported_features: 0
-      state: 'on'
-    light.innr_rb_250_c_59aa6efe_level_light_color_on_off:
-      min_mireds: 153
-      max_mireds: 555
-      effect_list:
-      - colorloop
-      supported_color_modes:
-      - color_temp
-      - hs
-      color_mode: color_temp
-      brightness: 3
-      color_temp: 467
-      hs_color:
-      - 30.015
-      - 87.382
-      rgb_color:
-      - 255
-      - 143
-      - 32
-      xy_color:
-      - 0.585
-      - 0.386
-      off_brightness:
-      friendly_name: Kommode
-      supported_features: 63
+      color_mode: onoff
       state: 'on'
     light.lampi:
       min_mireds: 153
       max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
       supported_color_modes:
       - color_temp
       - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Lampi
+      supported_features: 44
       color_mode: xy
       brightness: 48
       hs_color:
@@ -110,14 +89,41 @@
       xy_color:
       - 0.6015
       - 0.3759
-      mode: normal
-      dynamics: none
-      friendly_name: Lampi
-      supported_features: 40
+      effect: None
       state: 'on'
     switch.schlafzimmer_licht:
       friendly_name: Schlafzimmer Licht
       state: 'off'
+    light.schlafzimmer_kommode:
+      min_mireds: 153
+      max_mireds: 555
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      supported_color_modes:
+      - color_temp
+      - xy
+      linkquality: 80
+      friendly_name: Schlafzimmer Kommode
+      supported_features: 63
+      color_mode: color_temp
+      brightness: 18
+      color_temp: 555
+      hs_color:
+      - 29.751
+      - 100
+      rgb_color:
+      - 255
+      - 126
+      - 0
+      xy_color:
+      - 0.614
+      - 0.373
+      state: 'on'
   icon: mdi:baby-bottle
 - id: '1649017620156'
   name: Schlafzimmer Nachtlicht
@@ -169,3 +175,226 @@
       friendly_name: Schlafzimmer Licht
       state: 'off'
   icon: mdi:weather-night
+- id: '1651699265494'
+  name: Home Entertainment
+  entities:
+    light.couch:
+      effect_list:
+      - None
+      - candle
+      supported_color_modes:
+      - brightness
+      mode: normal
+      dynamics: none
+      friendly_name: Couch
+      supported_features: 44
+      state: 'off'
+    light.streifen:
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Streifen
+      supported_features: 40
+      color_mode: xy
+      brightness: 51
+      hs_color:
+      - 34.508
+      - 75.686
+      rgb_color:
+      - 255
+      - 173
+      - 62
+      xy_color:
+      - 0.536
+      - 0.4095
+      state: 'on'
+    light.hue_gradient_lightstrip_1:
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      icon: mdi:led-strip-variant
+      friendly_name: Gradient
+      supported_features: 44
+      state: 'off'
+    light.weihnachtsstern:
+      supported_color_modes:
+      - brightness
+      friendly_name: Weihnachtsstern
+      supported_features: 0
+      state: unavailable
+    light.hue_smart_plug_1:
+      supported_color_modes: []
+      mode: normal
+      dynamics: none
+      friendly_name: Lichterkette links
+      supported_features: 0
+      state: 'off'
+    light.hue_smart_plug_1_2:
+      supported_color_modes: []
+      mode: normal
+      dynamics: none
+      friendly_name: Lichterkette rechts
+      supported_features: 0
+      state: 'off'
+    cover.wohnzimmer_rollo:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo
+      supported_features: 15
+      state: closed
+    cover.wohnzimmer_rollo_balkon_links:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Links
+      supported_features: 15
+      state: closed
+    cover.wohnzimmer_rollo_balkon_rechts:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Rechts
+      supported_features: 15
+      state: closed
+    cover.kuche_rollo_links:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Küche Rollo links
+      supported_features: 15
+      state: closed
+    cover.kuche_rollo_rechts:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Küche Rollo rechts
+      supported_features: 15
+      state: closed
+    switch.kuche_licht:
+      friendly_name: Küche Licht
+      state: 'off'
+    light.kuche_licht:
+      supported_color_modes:
+      - onoff
+      friendly_name: Küche Licht
+      supported_features: 0
+      state: 'off'
+    light.on_off_plug_1_2:
+      supported_color_modes: []
+      mode: normal
+      dynamics: none
+      friendly_name: Plug Küche
+      supported_features: 0
+      state: 'off'
+  icon: mdi:television
+- id: '1652084230776'
+  name: Meeting
+  entities:
+    light.daniel_schreibtisch_mitte:
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      supported_color_modes:
+      - color_temp
+      - xy
+      mode: normal
+      dynamics: none
+      friendly_name: Daniel Schreibtisch mitte
+      supported_features: 44
+      color_mode: color_temp
+      brightness: 115
+      hs_color:
+      - 54.768
+      - 1.6
+      rgb_color:
+      - 255
+      - 254
+      - 250
+      xy_color:
+      - 0.326
+      - 0.333
+      effect: None
+      color_temp: 153
+      state: 'on'
+    light.schreibtisch_daniel_2:
+      supported_color_modes:
+      - color_temp
+      - xy
+      icon: mdi:lightbulb-group
+      friendly_name: Schreibtisch Daniel
+      supported_features: 44
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
+      entity_id:
+      - light.daniel_schreibtisch_links
+      - light.daniel_schreibtisch_rechts
+      color_mode: color_temp
+      brightness: 255
+      hs_color:
+      - 54.768
+      - 1.6
+      rgb_color:
+      - 255
+      - 254
+      - 250
+      xy_color:
+      - 0.326
+      - 0.333
+      effect: None
+      color_temp: 153
+      state: 'on'
+- id: '1652728036315'
+  name: Wohnung verrammeln
+  entities:
+    cover.schlafzimmer_rollo_balkon:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Schlafzimmer Rollo Balkon
+      supported_features: 15
+      state: open
+    cover.wohnzimmer_rollo:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo
+      supported_features: 15
+      state: open
+    cover.wohnzimmer_rollo_balkon_links:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Links
+      supported_features: 15
+      state: open
+    cover.wohnzimmer_rollo_balkon_rechts:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Rechts
+      supported_features: 15
+      state: open
+    cover.kuche_rollo_links:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Küche Rollo links
+      supported_features: 15
+      state: open
+    cover.kuche_rollo_rechts:
+      current_position: 50
+      device_class: shutter
+      friendly_name: Küche Rollo rechts
+      supported_features: 15
+      state: open
+  icon: mdi:curtains-closed
